--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/branchtransfers.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/branchtransfers.tmpl
@@ -136,7 +136,7 @@
             </tr>
             <tr>
                 <th scope="row">Enter barcode</th>
-                <td><input name="barcode" size="15" /></td>
+                <td><input name="barcode" size="15" class="focus" /></td>
             </tr>
         </table>
         <input type="hidden" name="tobranchcd" value="<!-- TMPL_VAR Name="tobrancd" -->" />
