--- a/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/advsearch.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/catalogue/advsearch.tmpl
@@ -2,8 +2,6 @@
 <title>Koha &rsaquo; Catalogue &rsaquo; Advanced Search</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 <script type="text/JavaScript" language="JavaScript">
-	document.getElementById('search_box').focus(); // auto focus on the search input.
-	
 	/**
 	 *  Function add_field();
 	 *  This function allows to display a new field to search.
@@ -104,7 +102,7 @@
     <option value="bc" <!-- TMPL_IF NAME="selected" -->selected="<!-- TMPL_VAR NAME="selected" -->"<!-- /TMPL_IF -->>Barcode</option>
 
         </select>
-        <input id="search_box" type="text" size="30" name="q" title="Enter search terms" value="" />
+        <input id="search_box" type="text" size="30" name="q" title="Enter search terms" value="" class="focus" />
         <!-- TMPL_IF NAME="expanded_options" -->
             <!-- TMPL_IF NAME="add_field" -->
                 <a href="JavaScript:add_field();" id="ButtonPlus" title="Add another field">[+]</a>
