--- a/koha-tmpl/intranet-tmpl/prog/en/modules/serials/serial-issues-full.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/serials/serial-issues-full.tmpl
@@ -2,7 +2,7 @@
 <!--TMPL_INCLUDE NAME="menu-serials.inc" -->
 
 <!-- TMPL_UNLESS name="popup" -->
-	<h1 class="serial">Subscription information for biblio #<!-- TMPL_VAR NAME="biblionumber" --> with title : <!-- TMPL_VAR name="bibliotitle" --></h1>
+	<h1>Subscription information for biblio #<!-- TMPL_VAR NAME="biblionumber" --> with title : <!-- TMPL_VAR name="bibliotitle" --></h1>
 	<p>
 	<a href="opac-detail.pl?biblionumber=<!-- TMPL_VAR name="biblionumber" -->" class="button serial">Back to biblio</a>
 <!-- /TMPL_UNLESS -->
@@ -17,13 +17,13 @@
 	<div name="<!-- TMPL_VAR NAME="year" -->" id="<!-- TMPL_VAR NAME="year" -->" style="position:absolute; visibility:hidden; margin-top:0px; border:4px;" <!--TMPL_IF Name="first" -->style="visibility:visible"<!--/TMPL_IF -->>
 		<table>
 			<tr>
-				<th class="serial">Information
+				<th>Information
 				</th>
-				<th class="serial">Date
+				<th>Date
 				</th>
-				<th class="serial">Number
+				<th>Number
 				</th>
-				<th class="serial">Status
+				<th>Status
 				</th>
 			</tr>
 			<!-- TMPL_LOOP Name="serials" -->
