--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/selectbranchprinter.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/selectbranchprinter.tmpl
@@ -1,10 +1,12 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Circulation &rsaquo; Set Library</title>
+<title>Koha &rsaquo; Circulation &rsaquo; Set Library</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-circ.inc" -->
+<!-- TMPL_INCLUDE NAME="circ-search.inc" -->
+
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/circ/circulation.pl">Circulation</a> &rsaquo; Set Library</div>
 
 <div id="doc3" class="yui-t2">
    
@@ -12,7 +14,8 @@
 	<div id="yui-main">
 	<div class="yui-b"><div class="yui-g">
 
-<h1>Circulation &rsaquo; Set Library</h1>
+
+<h1>Set Library</h1>
 
 <form method="post" action="/cgi-bin/koha/circ/circulation.pl">
 <!-- TMPL_VAR NAME="branch" -->
@@ -50,5 +53,5 @@
 </div>
 </div>
 
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+<!-- TMPL_INCLUDE NAME="circ-menu.inc" -->
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
