--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -1,7 +1,7 @@
 @import url( /intranet-tmpl/prog/en/lib/yui/reset-fonts-grids.css) all;
 
 a, a:link, a:visited, a:active {
-	color : #316494;
+	color : #0000CC;
 }
 
 a:hover {
@@ -227,6 +227,7 @@ legend {
 #breadcrumbs {
 	background-color : #F3F3F3;
 	border-bottom : 1px solid #E8E8E8;
+	clear : both;
 	font-size : 90%;
 	padding :.2em .5em .4em .5em;
 }
@@ -240,8 +241,13 @@ div#header_search {
 	background-image : url("../../img/koha-logo-medium.gif");
 	background-position : .5em .5em;
 	background-repeat : no-repeat;
+	float: left;
 	padding-left : 14.2em;
-	margin: 1em .5em 1em 0;
+	margin: 1em 0 1.5em 0;
+}
+
+div#header_search input {
+	font-size : 1.3em;
 }
 
 div#header_search ul.link-tabs {
@@ -254,11 +260,9 @@ div#header_search ul.link-tabs li.on a, div#header_search ul.link-tabs li a, div
 }
 
 div#circ_search,div#catalog_search {
-	border-top : 1px solid #EEEEEE;
-	border-left : 1px solid #EEEEEE;
-	border-right : 1px solid #666666;
-	border-bottom : 1px solid #CCCCCC;
-	padding : .5em 2em .5em 1em;
+	border : 0;
+	border-bottom : 1px solid #FF9900;
+	padding : 0 0 .2em 0;
 }
 
 div#circ_search {
@@ -272,7 +276,7 @@ div#catalog_search {
 /* Panel-Switch Tabs */
 ul.link-tabs {
 	list-style-type: none;
-	margin: 2px 0 9px 5px;
+	margin: 1px 0 9px 5px;
 	padding: 0;
 }
 
@@ -290,16 +294,15 @@ ul.link-tabs li a {
 }
 
 ul.link-tabs li.off a {
-	background-color: #EEEEEB;
-	border-top: 1px solid #DDDDDD;
+	background-color: #FFFFFF;
+	border : 0;
 	margin-right : 1px;
+	text-decoration: underline;
 }
 
 ul.link-tabs li.off a:hover {
 	background-color: #FFFFEC;
-	border-bottom: 1px solid #333333;
-	border-left : 1px solid #BEBF84;
-	border-right : 2px solid #333333;
+	border : 0;
 	margin-right : 0;
 	padding: .2em 1.2em .2em 1.2em;
 }
