--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/stats.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/stats.tmpl
@@ -1,10 +1,12 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Statistics</title>
+<title>Koha &rsaquo; Circulation &rsaquo; Statistics</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-circ.inc"-->
+<!-- TMPL_INCLUDE NAME="circ-search.inc" -->
+
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/circ/circulation.pl">Circulation</a>  &rsaquo; Statistics</div>
 
 <div id="doc3" class="yui-t2">
    
@@ -48,5 +50,5 @@
 </div>
 </div>
 
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+<!-- TMPL_INCLUDE NAME="circ-menu.inc" -->
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
