--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/transferstodo.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/transferstodo.tmpl
@@ -1,20 +1,19 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Circulation
-<!-- TMPL_IF Name="borrowernumber" -->
-: Checkout to <!-- TMPL_VAR name="surname" -->, <!-- TMPL_VAR name="firstname" -->
-(<!-- TMPL_VAR NAME="cardnumber" -->)
-<!-- /TMPL_IF --></title>
+<title>Koha &rsaquo; Circulation &rsaquo; Transfers to do</title>
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-circ.inc" -->
+<!-- TMPL_INCLUDE NAME="circ-search.inc" -->
+
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/circ/circulation.pl">Circulation</a> &rsaquo; Transfers to do</div>
 
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
 	<div id="yui-main">
 	<div class="yui-b"><div class="yui-g">
+
 
     <h1>Transfers to do <!-- TMPL_VAR NAME="show_date" --></h1>
     <!-- TMPL_IF name="branchesloop" -->
@@ -76,5 +75,5 @@
 </div>
 </div>
 
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+<!-- TMPL_INCLUDE NAME="circ-menu.inc" -->
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
