--- a/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/acqui-home.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/acqui/acqui-home.tmpl
@@ -94,8 +94,8 @@
         <!-- TMPL_LOOP name="loop_budget" -->
             <tr>
                 <td><!-- TMPL_VAR name="bookfundname" --></td>
-                <td><!-- TMPL_VAR name="budgetamount" --></td>
-                <td><!-- TMPL_VAR name="spent" --></td>
+                <td><a href="/cgi-bin/koha/admin/aqbudget.pl?op=add_form&aqbudgetid=<!--TMPL_VAR NAME="aqbudgetid"-->"><!-- TMPL_VAR name="budgetamount" --></a></td>
+                <td><a href="/cgi-bin/koha/acqui/spent.pl?bookfund=<!--TMPL_VAR NAME="bookfundid"-->&start=<!--TMPL_VAR NAME="sdate"-->&end=<!-- TMPL_VAR NAME="edate"-->"><!-- TMPL_VAR name="spent" --></a></td>
                 <td><!-- TMPL_VAR name="comtd" --></td>
                 <td><!-- TMPL_VAR name="avail" --></td>
             </tr>
