--- a/koha-tmpl/opac-tmpl/prog/en/opac-detail.tmpl
+++ b/koha-tmpl/opac-tmpl/prog/en/opac-detail.tmpl
@@ -279,7 +279,7 @@
         <br />
         <!--/TMPL_LOOP-->
     <!-- TMPL_ELSE  -->
-        <b>No reviews has been writed on this biblio.</b>
+        <b>No reviews have been written about this.</b>
     <!-- /TMPL_IF -->
     <!-- TMPL_IF NAME="loggedinusername" -->
         <a href="javascript:Dopop('/cgi-bin/koha/opac-review.pl?biblionumber=<!-- TMPL_VAR NAME="biblionumber"-->');">
