missing end <div>
Signed-off-by: Owen Leonard <oleonard@myacpl.org>
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tmpl
@@ -887,6 +887,6 @@ No patron matched <!-- TMPL_VAR name="message" -->
 </div>
 </div>
 </div>
-
+</div>
 <!-- TMPL_INCLUDE NAME="circ-menu.inc" -->
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
