More work on resident search, adding breadcrumbs and resident search to member pages.
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/member-password.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/member-password.tmpl
@@ -4,7 +4,9 @@
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-members.inc" -->
+<!-- TMPL_INCLUDE NAME="members-search.inc" -->
+
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/members/members-home.pl">Patrons</a>  &rsaquo; <!-- TMPL_IF NAME="newpassword" -->Password Updated<!-- TMPL_ELSE -->Change Username and/or Password<!-- /TMPL_IF --></div>
 
 <div id="doc3" class="yui-t2">
    
@@ -40,5 +42,5 @@
 </div>
 </div>
 
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+<!-- TMPL_INCLUDE NAME="members-menu.inc" -->
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
