--- a/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
+++ b/koha-tmpl/intranet-tmpl/prog/en/css/staff-global.css
@@ -137,13 +137,6 @@ li {
 	line-height : 2em;
 }
 
-#toplevelnav li.more a {
-	background-image: url("../../img/more-arrow.gif");
-	background-position: right;
-	background-repeat: no-repeat;
-	padding-right : 13px;
-}
-
 #submenu {
 	margin : 0 0 .5em 0;
 	padding : 0;
@@ -158,7 +151,7 @@ li {
 	padding-left : 0;
 }
 
-#toplevelnav ul {
+/*#toplevelnav ul {
 	margin : 0;
 	padding : 0;
 }
@@ -172,7 +165,7 @@ li {
 
 #toplevelnav li:last-child, #submenu li:last-child {
 	border : 0;
-}
+}*/
 
 table {
 	border-collapse : collapse;
@@ -255,14 +248,20 @@ div#header_search ul.link-tabs {
 	margin-bottom : -4px;
 }
 
-div#header_search ul.link-tabs li.on a, div#header_search ul.link-tabs li a, div#header_search ul.link-tabs li.off a {
+div#header_search ul.link-tabs li.on a,
+div#header_search ul.link-tabs li a,
+div#header_search ul.link-tabs li.off a {
 	padding : 0.1em .5em .2em .5em;
 }
 
-div#circ_search,div#catalog_search {
+div#circ_search,div#catalog_search,div#patron_search {
 	border : 0;
 	border-bottom : 1px solid #FF9900;
 	padding : 0 0 .2em 0;
+}
+
+div#patron_search {
+	display : none;
 }
 
 div#circ_search {
@@ -319,4 +318,106 @@ ul.link-tabs li.on a {
 div#header_search .tip {
 	font-size: 93%;
 	color : Gray;
+}
+
+/* ClickMenu Overrides */
+
+div.cmDiv
+{
+	border: 0;
+	background-color: #F3F3F3;
+}
+
+
+.clickMenu li.more a {
+	background-image: url("../../img/more-arrow.gif");
+	background-position: right;
+	background-repeat: no-repeat;
+	padding-right : 13px;
+}
+
+.clickMenu li.more li a {
+	background-image : none;
+	padding-right : 0;
+}
+
+.clickMenu
+{
+	margin: 0;
+	padding: 0;
+	cursor: default;
+}
+.clickMenu, .clickMenu ul
+{
+	list-style: none;
+}
+.clickMenu ul
+{
+	margin: 0;
+	padding: 2px;
+	border: 0;
+	background-color: #F3F3F3;
+	min-width: 100px; /* ie doesnt know this :/ */
+	//float: left;/*ie again*/
+	//width: 100%;/*and again*/
+}
+.clickMenu div.outerbox
+{
+	display: none;
+	min-width: 106px; /* firefox produces animation-flickering when the box is bigger than this :/ */
+}
+.clickMenu div.inner
+{
+	//top: 20px; /* for ie */
+	left: 0;
+	margin: 0;
+}
+.clickMenu div.inner div.outerbox
+{
+	margin: 0;
+	left: 98px;
+	//left: 90px; /* for ie */
+	top: -3px;
+}
+.clickMenu li
+{
+	list-style-type : none;
+	position: relative;
+	padding: 0 20px 0 2px;
+	/*white-space: nowrap; does not really work in ie */
+}
+.clickMenu li.main
+{
+	float: left;
+	padding: 0 10px;
+	background-color: #F3F3F3;
+	//height: 20px; /* for ie */
+}
+.clickMenu li.main li
+{
+	z-index: 2;
+	min-width: 78px;
+}
+.clickMenu li.hover
+{
+	z-index: 1 !important; /* the hover z-index has to be below the normal one the hovering items may be drawn over a submenu */
+	background-color : transparent;
+}
+.clickMenu img.liArrow
+{
+	position: absolute;
+	right: 5px;
+	top: 0.41em;
+}
+.clickMenu ul a {
+	cursor: default;
+}
+
+ul.innerBox a {
+	cursor : pointer;
+}
+
+ul.innerBox {
+	
+	border: 1px solid #E8E8E8;
 }
