--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/deletemem.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/deletemem.tmpl
@@ -4,8 +4,8 @@
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-members.inc" -->
 
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/members/members-home.pl">Patrons</a>  &rsaquo; Cannot Delete Patron</div>
 <div id="doc3" class="yui-t2">
    
    <div id="bd">
@@ -27,5 +27,5 @@
 </div>
 </div>
 
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+<!-- TMPL_INCLUDE NAME="members-menu.inc" -->
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
