--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/guarantor_search.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/guarantor_search.tmpl
@@ -4,6 +4,9 @@
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
+<!-- TMPL_INCLUDE NAME="members-search.inc" -->
+
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/members/members-home.pl">Patrons</a>  &rsaquo; Guarantor Search</div>
 
 <div id="doc" class="yui-t7">
    <div id="bd">
@@ -53,4 +56,5 @@
 </div>
 </div>
 
+<!-- TMPL_INCLUDE NAME="members-menu.inc" -->
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
