--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentryP.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentryP.tmpl
@@ -6,7 +6,9 @@
 </head>
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
-<!-- TMPL_INCLUDE NAME="menu-members.inc" -->
+<!-- TMPL_INCLUDE NAME="members-search.inc" -->
+
+<div id="breadcrumbs"><a href="/cgi-bin/koha/mainpage.pl">Home</a> &rsaquo; <a href="/cgi-bin/koha/members/members-home.pl">Patrons</a>  &rsaquo; Add Professional Patron</div>
 
 <div id="doc3" class="yui-t2">
    
@@ -677,5 +679,5 @@
 </div>
 </div>
 
-<!-- TMPL_INCLUDE NAME="mainmenu.inc" -->
+<!-- TMPL_INCLUDE NAME="members-menu.inc" -->
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
