finishing the changes to circulation.tmpl
Signed-off-by: Owen Leonard <oleonard@myacpl.org>
Signed-off-by: Chris Cormack <crc@liblime.com>

--- a/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/circ/circulation.tmpl
@@ -68,9 +68,8 @@
    <div id="bd">
 	<div id="yui-main">
 	<div class="yui-b">
-
 <!-- TMPL_IF NAME="borrowernumber" -->
-    <h1>Checkouts</h1>
+<!-- TMPL_INCLUDE NAME="circ-toolbar.inc" -->
 <!-- TMPL_ELSE -->
 <!--     <h1>Circulation &rsaquo; Checkouts</h1> -->
 <!-- /TMPL_IF -->
