--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/member-quicksearch-results.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/member-quicksearch-results.tmpl
@@ -19,11 +19,8 @@
 <body>
 <!-- TMPL_INCLUDE NAME="header.inc" -->
 
-<div id="doc3" class="yui-t2">
-   
+<div id="doc" class="yui-t7">
    <div id="bd">
-	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
 
 <div class="searchresults">
 <table>
@@ -50,8 +47,6 @@
   </div>
   <!-- TMPL_ELSE -->No results found<!-- /TMPL_IF -->
 
-</div>
-</div>
 </div>
 
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
