--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/member-quicksearch.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/member-quicksearch.tmpl
@@ -4,19 +4,14 @@
 </head>
 <body>
 
-<div id="doc3" class="yui-t2">
-   
+<div id="doc" class="yui-t7">
    <div id="bd">
-	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
 
 <!-- TMPL_INCLUDE NAME="header.inc" -->    <form action="/cgi-bin/koha/members/member.pl" method="post" id="mainform" class="mainform">
     <label for="member">Patron Search:</label><input id="member" type="text" size="25" name="member" /><input type="hidden" name="quicksearch" value="1" />
     <input type="submit" value="Search" />
     </form>
 
-</div>
-</div>
 </div>
 
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
