--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentryC.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentryC.tmpl
@@ -14,7 +14,7 @@
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 	<!-- TMPL_IF NAME="add" -->
 	<h1>
@@ -678,7 +678,9 @@
 <!-- /TMPL_IF -->
 </div>
 </div>
-</div>
 
+<div class="yui-b">
 <!-- TMPL_INCLUDE NAME="members-menu.inc" -->
+</div>
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
