--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/boraccount.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/boraccount.tmpl
@@ -12,7 +12,7 @@
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 <!-- The manual invoice and credit buttons -->
 <div id="action">
@@ -57,7 +57,9 @@
 
 </div>
 </div>
-</div>
 
+<div class="yui-b">
 <!-- TMPL_INCLUDE NAME="members-menu.inc" -->
+</div>
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
