--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentryA.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentryA.tmpl
@@ -1,5 +1,5 @@
 <!-- TMPL_INCLUDE NAME="doc-head-open.inc" -->
-<title>Koha &rsaquo; Adult Patron Management</title>
+<title>Koha &rsaquo; Adult Patron Management</title> 
 <script type="text/javascript" src="<!-- TMPL_VAR NAME="themelang" -->/js/members.js"></script>
 <!-- TMPL_INCLUDE NAME="calendar.inc" -->
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
@@ -14,7 +14,7 @@
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
 	<!-- TMPL_IF NAME="opadd" -->
 	<h1>
@@ -28,7 +28,7 @@
 	<!-- TMPL_IF NAME="check_member" -->
 		<!-- TMPL_IF NAME="step_2" -->
 		<p>
-		<form name="form_double">
+		<form name="form_double" action="/cgi-bin/koha/memberentry.pl" method="post">
 			<div id="problem">
 				Duplicate suspected
 				<a href="javascript:Dopop('borrowers_details.pl?borrowernumber=<!--TMPL_VAR NAME="check_member"-->');" >Detail</a>
@@ -36,7 +36,7 @@
 				<a href="/cgi-bin/koha/members/memberentry.pl?borrowernumber=<!--TMPL_VAR NAME="check_member"-->&category_type=<!--TMPL_VAR NAME="check_categorytype"-->">Yes</a> 
 				&nbsp;&nbsp;&nbsp; No, it is not
 				<!-- TMPL_IF NAME="checked"-->
-					<input type="checkbox" checked name="answernodouble" />
+					<input type="checkbox" checked="checked" name="answernodouble" />
 				<!-- TMPL_ELSE -->
 					<input type="checkbox" name="answernodouble" />
 				<!-- /TMPL_IF -->
@@ -64,7 +64,7 @@
 	
 
 	<!-- TMPL_IF NAME="step_1"-->
-<form name="form"  action="/cgi-bin/koha/members/memberentry.pl" method="post"> 
+<form name="form" action="/cgi-bin/koha/members/memberentry.pl" method="post"> 
 <!-- 		field always hidden in different form (1,2,3) -->
 	<input type="hidden" name="BorrowerMandatoryField" value="<!--TMPL_VAR NAME="BorrowerMandatoryField"-->" />
 	<input type="hidden" name="FormFieldList" value="surname|select_city|othernames|initials|title|cardnumber|firstname|dateofbirth|sort1|sort2" />
@@ -95,12 +95,12 @@
 	<input type="hidden" name="mobile" value="<!-- TMPL_VAR NAME="mobile" -->" />	
 	<input type="hidden" name="fax" value="<!-- TMPL_VAR NAME="fax" -->" /> 
 	<input type="hidden" name="email" value="<!-- TMPL_VAR NAME="email" -->" />
-	<input type="hidden" name="emailpro" value="<!-- TMPL_VAR NAME="emailpro" -->" >
+	<input type="hidden" name="emailpro" value="<!-- TMPL_VAR NAME="emailpro" -->" />
 	
 <!-- 	from form 3	 -->
 	<input type="hidden" name="dateenrolled" size="20" value="<!-- TMPL_VAR NAME="dateenrolled" -->" />
 	<input type="hidden" name="dateexpiry" size="20" value="<!-- TMPL_VAR NAME="dateexpiry" -->" />
-	<textarea  style="display:none;" name="opacnote" cols="70" rows="3"><!-- TMPL_VAR NAME="opacnote"--></textarea>
+	<textarea style="display:none;" name="opacnote" cols="70" rows="3"><!-- TMPL_VAR NAME="opacnote"--></textarea>
 	<textarea style="display:none;" name="borrowernotes" cols="70" rows="3"><!-- TMPL_VAR NAME="borrowernotes" --></textarea>
 	<input type="hidden" name="userid" size="20" value="<!-- TMPL_VAR NAME="userid" -->" />
 	<input type="hidden" name="password" size="20" value="<!-- TMPL_VAR NAME="password" -->" />	
@@ -116,7 +116,7 @@
 	<!-- TMPL_ELSE -->
 		<input type="hidden" name="op" value="modify" />
 	<!-- /TMPL_IF -->
-	<fieldset id="memberentry_identity">
+	<fieldset>
 		<legend>Patron identity</legend>
 		<p>
 		<!-- TMPL_IF NAME="female" -->
@@ -204,7 +204,7 @@
 			<input style="text-transform:uppercase;" type="text" name="othernames" size="20" value="<!-- TMPL_VAR NAME="othernames" -->" />
 		</p>
 	</fieldset>
-	<fieldset id="memberentry_identity">
+	<fieldset>
 		<legend>Patron type</legend>
 		<p>
 		<!-- TMPL_IF NAME="catcodepopup" -->
@@ -249,7 +249,7 @@
 		<!--TMPL_IF NAME="CGIsort2" -->	
 			<!-- TMPL_VAR NAME="CGIsort2" -->
 		<!--TMPL_ELSE-->
-			<input  type="text" name="sort2" size="20" value="<!-- TMPL_VAR NAME="sort2" -->"/ >
+			<input  type="text" name="sort2" size="20" value="<!-- TMPL_VAR NAME="sort2" -->" />
 		<!-- /TMPL_IF -->	
 		</p>
 	</fieldset>
@@ -273,7 +273,7 @@
 	<input type="hidden" name="select_roadtype" value="<!-- TMPL_VAR NAME="select_roadtype" -->" />
 	<input type="hidden" name="destination" value="<!-- TMPL_VAR NAME="destination" -->" />
 	<input type="hidden" name="check_member" value="<!-- TMPL_VAR NAME="check_member" -->" />
-	<input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="borrowernumber" -->">
+	<input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="borrowernumber" -->" />
 	<input type="hidden" name="nodouble"  value="<!-- TMPL_VAR NAME="nodouble" -->" />
 
 <!-- 	from form 1	 -->
@@ -498,7 +498,7 @@
 	<input type="hidden" name="select_roadtype" value="<!-- TMPL_VAR NAME="select_roadtype" -->" />
 	<input type="hidden" name="destination" value="<!-- TMPL_VAR NAME="destination" -->" />
 	<input type="hidden" name="check_member" value="<!-- TMPL_VAR NAME="check_member" -->" />
-	<input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="borrowernumber" -->">
+	<input type="hidden" name="borrowernumber" value="<!-- TMPL_VAR NAME="borrowernumber" -->" />
 	<input type="hidden" name="nodouble"  value="<!-- TMPL_VAR NAME="nodouble" -->" />
 
 <!-- 	from form 1	 -->
@@ -631,7 +631,9 @@
 
 </div>
 </div>
-</div>
 
+<div class="yui-b">
 <!-- TMPL_INCLUDE NAME="members-menu.inc" -->
+</div>
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
