--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentryP.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/memberentryP.tmpl
@@ -14,7 +14,7 @@
    
    <div id="bd">
 	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
+	<div class="yui-b">
 
     <!-- TMPL_IF NAME="opadd" -->
     <h1>Add professional patron (step <!-- TMPL_VAR NAME="step" -->) <!-- TMPL_VAR NAME="surname" --> <!-- TMPL_VAR name="firstname" --></h1>
@@ -677,7 +677,9 @@
 <!-- /TMPL_IF -->
 </div>
 </div>
-</div>
 
+<div class="yui-b">
 <!-- TMPL_INCLUDE NAME="members-menu.inc" -->
+</div>
+</div>
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
