--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/moremember-print.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/moremember-print.tmpl
@@ -3,13 +3,9 @@
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 </head>
 <body>
-<!-- TMPL_INCLUDE NAME="header.inc" -->
 
-<div id="doc3" class="yui-t2">
-   
+<div id="doc3">
    <div id="bd">
-	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
 
 <h3><a href="/cgi-bin/koha/circ/circulation.pl?findborrower=<!-- TMPL_VAR NAME="cardnumber" -->">Account Summary: <!-- TMPL_VAR NAME="firstname" --> <!-- TMPL_VAR NAME="surname" --> (<!-- TMPL_VAR NAME="cardnumber" -->)</a></h3>
 
@@ -66,8 +62,6 @@
 
 <!-- endmenu -->
 
-</div>
-</div>
 </div>
 
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
