--- a/koha-tmpl/intranet-tmpl/prog/en/modules/members/moremember-receipt.tmpl
+++ b/koha-tmpl/intranet-tmpl/prog/en/modules/members/moremember-receipt.tmpl
@@ -3,13 +3,10 @@
 <!-- TMPL_INCLUDE NAME="doc-head-close.inc" -->
 </head>
 <body>
-<!-- TMPL_INCLUDE NAME="header.inc" -->
 
-<div id="doc3" class="yui-t2">
+<div id="doc3">
    
    <div id="bd">
-	<div id="yui-main">
-	<div class="yui-b"><div class="yui-g">
 
 <h3>Library</h3>
 <!-- TMPL_IF NAME="branchname" --><!-- TMPL_VAR NAME="branchname" --><br /><!-- /TMPL_IF -->
@@ -50,8 +47,6 @@ Issued To <a href="/cgi-bin/koha/circ/circulation.pl?findborrower=<!-- TMPL_VAR 
 
 <!-- endmenu -->
 
-</div>
-</div>
 </div>
 
 <!-- TMPL_INCLUDE NAME="intranet-bottom.inc" -->
